60% done with demo, gauges set up and the navbar

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body style="margin:0; padding:0">
 	<script src="src/index.jsx"></script>
 	<div id="root">
 	</div>
