finished the demo added static gear indicators into the middle using the flexbox containers

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="margin:0; padding:0">
+  <body style="margin:0; padding:0; box-sizing: border-box;">
 	<script src="src/index.jsx"></script>
 	<div id="root">
 	</div>
